[package]
name = "staking"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { path = "../token", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
